src/mongo/db/repl/storage_interface_impl.cpp
@@ -199,12 +199,37 @@ StorageInterfaceImpl::createCollectionForBulkLoading(
             collection = db->getDb()->createCollection(opCtx, nss.ns(), options, false);
             invariant(collection);
             wunit.commit();
+
+            // Build empty capped indexes.  Capped indexes cannot be build by the MultiIndexBlock
+            // because the cap might delete documents off the back while we are inserting them into
+            // the front.
+            if (options.capped) {
+                WriteUnitOfWork wunit(opCtx);
+                if (!idIndexSpec.isEmpty()) {
+                    auto status = collection->getIndexCatalog()->createIndexOnEmptyCollection(
+                        opCtx, idIndexSpec);
+                    if (!status.getStatus().isOK()) {
+                        return status.getStatus();
+                    }
+                }
+                for (auto&& spec : secondaryIndexSpecs) {
+                    auto status =
+                        collection->getIndexCatalog()->createIndexOnEmptyCollection(opCtx, spec);
+                    if (!status.getStatus().isOK()) {
+                        return status.getStatus();
+                    }
+                }
+                wunit.commit();
+            }
+
+
             coll = stdx::make_unique<AutoGetCollection>(opCtx, nss, MODE_IX);
 
             // Move locks into loader, so it now controls their lifetime.
             auto loader = stdx::make_unique<CollectionBulkLoaderImpl>(opCtx,
                                                                       collection,
-                                                                      idIndexSpec,
+                                                                      options.capped ? BSONObj()
+                                                                                     : idIndexSpec,
                                                                       std::move(threadPool),
                                                                       std::move(runner),
                                                                       std::move(db),
@@ -223,7 +248,9 @@ StorageInterfaceImpl::createCollectionForBulkLoading(
     }
 
     invariant(collection);
-    status = loaderToReturn->init(collection, secondaryIndexSpecs);
+
+    status = loaderToReturn->init(collection,
+                                  options.capped ? std::vector<BSONObj>() : secondaryIndexSpecs);
     if (!status.isOK()) {
         return status;
     }
